Website made all content real

--- a/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="css/basicstylesheet.css">
+    <link rel="stylesheet" href="css/news.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -18,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="active" href="./index.html">Home</a></li>
+        <li class="firstnavitem"><a class="active" href="./index.html">Home</a></li>
         <li><a class="hoverable" href="./subpages/lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -42,7 +43,7 @@
 </nav>
 
 <!-- Banner, intro text and buttons: -->
-<header class="indexbackgroundimage">
+<header class="banner indexbackgroundimage">
     <div class="logo"><img src="images/icons/logo_magenta.png" alt="logo"></div>
     <h1>Tide is your festival with music drinks and more...</h1>
     <p class="subintro">Enjoy your stay at the Coast of Freedom</p>
@@ -60,73 +61,21 @@
         <h4>13 January 2016</h4>
         <p> The winners of the 2016 European Festival Awards were announced in Groningen, The Netherlands
             last night. 'Tide' managed to finish in first place.</p>
-        <a class="button button2" href="subpages/tickets/buytickets.html">Read more</a>
+        <a class="button button2" href="subpages/news/13_january_2016.html#title">Read more</a>
     </section>
     <section class="threecolumns">
         <h3>76.000 visitors!</h3>
         <h4>25 December 2015</h4>
         <p>The first three nights of our festival attracted more than 76,000 visitors! Meanwhile 3-day-tickets are
             sold out, one-day tickets are still available. </p>
-        <a class="button button2" href="subpages/tickets/buytickets.html">Read more</a>
+        <a class="button button2" href="subpages/news/25_december_2015.html#title">Read more</a>
     </section>
     <section class="threecolumns">
         <h3>Go-Pass sale!</h3>
         <h4>29 November 2015</h4>
         <p>From the 1st of december untill the 30th of january there will be a sale on Go-Pass
             tickets. Everyone buying a ticket in this time period will receive 25% discount.</p>
-        <a class="button button2" href="subpages/tickets/buytickets.html">Read more</a>
-    </section>
-</article>
-<article>
-    <section>
-        <figure>
-            <img src="images/articlebanners/trophies.jpg">
-        </figure>
-        <h3>Tide wins best European Festival of 2016!</h3>
-        <h4>13 January 2016</h4>
-        <p> The winners of the 2016 European Festival Awards were announced at a gala show in Groningen, The Netherlands
-            last night. 'Tide' managed to finish in first place.</p>
-        <p> Presented in association with Yourope (the European Festival Association) and marking the opening of the
-            annual four-day Eurosonic Noorderslag event, the European Festival Awards celebrate the successes of
-            Europe’s music festival industry. Decided by a combination of public vote and industry juries, the Awards
-            are the only pan-European body solely dedicated to recognising the contributions and achievements of the
-            event organisers and performing artists that generate billions of Euros for local economies and brighten up
-            the summer for tens of millions of festival-goers each year. The 2016 European Festival Awards featured over
-            350 festivals from 50 different European countries, with over 800,000 votes cast in total. This years award
-            goes to 'Tide', for an outstanding lineup and a great visual story telling performance. Runner up 'Sziget
-            Festival', responded in disgrace of the voting system. Thank you all for voting for Tide this
-            year as the best European festival.</p>
-    </section>
-    <section>
-        <figure>
-            <img src="images/articlebanners/people.jpg">
-        </figure>
-        <h3>Tide attracted 76.000 visitors in three days!</h3>
-        <h4>25 December 2015</h4>
-        <p>The first three nights of our festival attracted more than 76,000 visitors! Meanwhile 3-day-pass-tickets are
-            sold out, one-day tickets are still available. Friday night, Belgian band Hooverphonic attracted 7.000 music
-            fans, while a concert by American The Weeknd was quickly sold out. </p>
-        <p> Saturday evening, Belgian singer Antoine Hénaut and Mickey 3D and Feu! Chatterton from France performed at
-            'Tide'. While the Central Dome welcomed Americansinger Brisa Roché and her latest album "Invisible". On
-            Sunday, Bears of Legend and Chelim entertained the crowd, although it was Grandgeorges who sold out the
-            hall. At the Main Stage, Belgian
-            band La Smala & friends concluded the evening.</p>
-    </section>
-    <section>
-        <figure>
-            <img src="images/articlebanners/ticket.jpg">
-        </figure>
-        <h3>Limited time sale on Go-Pass tickets!</h3>
-        <h4>29 November 2015</h4>
-        <p>Beginning on the 1st of december untill the 30th of january there will be a limited sale on Go-Pass
-            tickets. Everyone buying a ticket between this time period will receive a 25% discount. This sale is
-            meant to encourage people to book tickets in advance, so we can comprehend the amount of people coming.</p>
-        <p>Like we've seen last year at the Tide festival, it became much busier than we could have ever anticipated,
-            causing some very busy moments on our festival. This made several complaints on our crowd management and its
-            understandable, people weren't to happy about it. So to prevent this from happening again this year, we're
-            introducing a limited time sale for all you early bookers! This way we know in advance how much crowd
-            management will be neccesary in the future. We can't foresee everything ofcourse, so we hop we've got your
-            suppoert on how we're handeling this. Remember, we're a young festival we learn by each step we take.</p>
+        <a class="button button2" href="subpages/news/29_november_2015.html#title">Read more</a>
     </section>
 </article>
 
