--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/blake.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/blake.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/blake.jpg" alt="James Blake" width="250" height="250">
         <h3 class="artistheader">James Blake</h3>
@@ -71,8 +72,6 @@
             Best New Artist. At the 2014 Brit Awards, Blake was nominated for the
             <a href='http://wikipedia.org/wiki/Brit_Award'>Brit Award</a> for British Male Solo Artist.
         </p>
-    </section>
-    <section>
         <h2>Early life</h2>
         <p>James Blake is the son of musician James Litherland, and showed a strong interest and aptitude in music from
             a young age. He received classical training in piano as a child, and completed primary education at Grange
@@ -92,8 +91,6 @@
             an exclusive <a href='http://wikipedia.org/wiki/Mount_Kimbie'>Mount Kimbie</a> track. As a
             second-year composition assignment for his studies at Goldsmiths, he submitted the soon-to-be-released <i>Klavierwerke</i>
             EP, which was awarded high marks.</p>
-    </section>
-    <section>
         <p>A third EP, entitled <i>CMYK</i>, was released through R&amp;S Records during 2010. The title track, "CMYK"
             was selected by <a href='http://wikipedia.org/wiki/BBC_Radio_1'>BBC Radio 1</a> DJ <a
                     href='http://wikipedia.org/wiki/Nick_Grimshaw'>Nick Grimshaw</a> as his <i>Record of the
@@ -113,7 +110,7 @@
                     href='http://wikipedia.org/wiki/Jessie_J'>Jessie J</a> at the BRIT Awards' "Critic's
             Choice". In January 2011, Blake was awarded Single of the Year (2010) for "CMYK" at Gilles Peterson's
             Worldwide Awards. Blake's work found itself on numerous 2010 year-end best-of lists, with "CMYK" ranking
-            24th on <i>Frontier Psychiatrist</i><span>'s top 40 songs of the year, <i>the Bells
+            24th on <i>Frontier Psychiatrist</i>'s top 40 songs of the year, <i>the Bells
             Sketch</i>/<i>CMYK</i>/<i>Klavierwerke</i>
         EPs ranking 8th on Pitchfork Media's top 50 albums of 2010, and "I Only Know (What I Know Now)" ranking 8th
         on Pitchfork's top 100 tracks of 2010.</p>
@@ -121,11 +118,12 @@
             was released on 7 February 2011. Only days after the original announcement was made, the album was leaked
             onto the internet. On 9 January 2011, "The Wilhelm Scream" was trailed as the album's second single ("Limit
             To Your Love" was also included on the album). In February 2011, James Blake first appeared on the cover of
-            the publication <i>The Fader</i>, in its 72nd issue. Blake debuted a collaboration with <a
-                    href='http://wikipedia.org/wiki/Bon_Iver'>Bon Iver</a> called "Fall Creek Boys Choir" in
+            the publication <i>The Fader</i>, in its 72nd issue. Blake debuted a collaboration with
+            <a href='http://wikipedia.org/wiki/Bon_Iver'>Bon Iver</a> called "Fall Creek Boys Choir" in
             August 2011 and during the next month, the BBC released an exclusive mix by Blake, which included 10 of his
             unreleased songs. These included "Deeds", "Olivia Kept", and "Evening Fell Hard for Us". During the final
             weeks of 2012, James Blake performed three "intimate" shows where he debuted new songs.</p>
+
         <p>Later that year, Blake released both the <i>Enough Thunder</i> and <i>Love What Happened Here</i> EPs in
             2011. These EPs, noticeably more structured than his previous releases, featured R&amp;B-tinged work as
             opposed to the experimental electronic style found on <i>CMYK</i>. Some reviewers expressed doubt about
