--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/chet.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/chet.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/chet.jpg" alt="Chet" width="250" height="250">
         <h3 class="artistheader">Chet Faker</h3>
@@ -72,8 +73,6 @@
             <i>Built on Glass</i>, Faker's debut studio album, was released to generally positive reviews and debuted at
             number one on the Australian ARIA Charts. Three songs from the album were subsequently voted into the top
             ten of Triple J's Hottest 100 of 2014, including the number one spot for "Talk Is Cheap".</p>
-    </section>
-    <section>
         <h2>Career</h2>
         <h3>Early career</h3>
         <p>Murphy decided to play under a stage name after people came to his shows thinking he was a different and
