--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/disclosure.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/disclosure.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/disclosure.jpg" alt="Disclosure" width="250" height="250">
         <h3 class="artistheader">Disclosure</h3>
@@ -70,8 +71,6 @@
             Friday line-up on the "Other Stage" at <a href='http://wikipedia.org/wiki/Glastonbury_Festival'>Glastonbury
             Festival</a> in the United Kingdom.
         </p>
-    </section>
-    <section>
         <h2>Early life</h2>
         <p>Born to professional musician parents, their father played in rock bands including 'No Angry Man' and 'The
             Look
@@ -89,6 +88,8 @@
             whilst
             Guy listened predominantly to hip hop, dubstep and was the drummer in an indie-style guitar band with school
             friends.</p>
+    </section>
+    <section>
         <h2>Career</h2>
         <p>Whilst Guy was attending Reigate College, he enjoyed studying classical music, especially the likes of Bach
             and
@@ -176,7 +177,7 @@
             were
             also released: "Willing and Able" and "Hourglass". The album was released on 25 September 2015 by PMR and
             Island. The album was also nominated for Best Dance/Electronica Album at the 2016 Grammy Awards.</p>
-        <section>
+        </section>
             <cite>
                 Source Wiki: <a href='https://en.wikipedia.org/wiki/Disclosure_(band)'>Disclosure (band)</a>
             </cite>
