--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/flume.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/flume.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/flume.jpg" alt="Flume" width="250" height="250">
         <h3 class="artistheader">Flume</h3>
@@ -68,8 +69,6 @@
         <p>Flume has remixed songs by artists such as Lorde, Sam Smith, <a href='http://wikipedia.org/wiki/Arcade_Fire'>Arcade
             Fire</a> and Disclosure. His second studio album, <i>Skin</i>, was released on 27 May 2016, to positive
             reviews and also topped the ARIA Albums Chart.</p>
-    </section>
-    <section>
         <h3>Early life</h3>
         <p>Harley Edward Streten was born on 5 November 1991, to filmmaker and record producer Glen Streten and his wife
             Lyndall, a teacher. He grew up on the <a href='http://wikipedia.org/wiki/Northern_Beaches'>Northern
