--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/frahm.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/frahm.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/frahm.jpg" alt="Nils Frahm" width="250" height="250">
         <h3 class="artistheader">Nils Frahm</h3>
@@ -65,6 +66,7 @@
             Berlin. He is known for combining classical and electronic music and for an unconventional approach to the
             piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog
             Taurus.</p>
+        <h3>Solo work</h3>
         <p>As well as his solo work, Frahm has released collaborations with such notable performers as Anne M&#252;ller,
             &#211;lafur Arnalds, and F. S. Blumm. Together with Frederic Gmeiner and Sebastian Singwald he records and
             performs as Nonkeen.</p>
