--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/lorde.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/lorde.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/lorde.jpg" alt="Lorde" width="250" height="250">
         <h3 class="artistheader">Lorde</h3>
@@ -71,6 +72,7 @@
             works. Her first major release, <i>The Love Club EP</i>, was commercially released in March 2013. The EP
             reached
             number two on the national record charts of New Zealand and Australia.</p>
+        <h3>Success</h3>
         <p>In mid-2013, Lorde released her debut single "Royals". It became an international crossover hit and made
             Lorde
             the youngest solo artist (and the only New Zealander) to achieve a US number-one single on the
