--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/maroon.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/maroon.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/maroon.jpg" alt="Maroon 5" width="250" height="250">
         <h3 class="artistheader">Maroon 5</h3>
@@ -78,6 +79,7 @@
             <i>The Fourth World</i> in 1997. After the album garnered a tepid response, the band parted ways with the
             record
             label and the members attended college.</p>
+        <h3>Image</h3>
         <p>In 2001, the band changed its image by adding guitarist James Valentine and pursuing a new direction under
             the
             name Maroon 5. At this point, Carmichael switched to playing keyboards, which has since become his main
@@ -117,6 +119,7 @@
             fifth studio album, <i>V</i>. Maroon 5 has sold more than 20 million albums and 70 million singles
             worldwide.
     </section>
+    <section>
     <h2>History</h2>
     <h3>1994&#8211;2002: Kara's Flowers and the formation of Maroon 5
     </h3>
@@ -142,7 +145,6 @@
     </section>
     <section>
         <h2>Musical style and influences</h2>
-
         <p>Adam Levine has stated: "[E]verything that's written and performed and put together pretty much comes from
             us. I
             just think people would be surprised to know that we&#8217;re a self-contained unit. We&#8217;re a band that
