--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/massive.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/massive.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/massive.jpg" alt="Massive Attack" width="250" height="250">
         <h3 class="artistheader">Massive Attack</h3>
@@ -70,8 +71,6 @@
         <p>The group has won numerous music awards throughout their career, including a Brit Award&#8212;winning Best
             British Dance Act, two MTV Europe Music Awards, and two Q Awards. They have released five studio albums that
             have sold over 11 million copies worldwide.</p>
-    </section>
-    <section>
         <h2>History</h2>
         <p>DJs <a href='http://wikipedia.org/wiki/Daddy_G'>Daddy G</a> and <a
                 href='http://wikipedia.org/wiki/Andrew_Vowles'>Andrew Vowles</a> and graffiti artist-turned-rapper <a
