--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/solveig.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/solveig.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/solveig.jpg" alt="Martin Solveig" width="250"
              height="250">
@@ -76,8 +77,6 @@
             18, he
             became a DJ and then started to work in famous Parisian nightclubs: L'Enfer, Le Queen, Les Bains Douches.
         </p>
-    </section>
-    <section>
         <h3>2002&#8211;07: <i>Sur la Terre</i> and <i>Hedonist</i></h3>
         <p>On 17 June 2002, Solveig released his debut studio album <i>Sur la Terre</i>, the album failed to chart. The
             album includes the singles "Madan", "Rocking Music" and "I'm a Good Man". On 12 September 2005, he released
