--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/utwo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/utwo.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/utwo.jpg" alt="U2" width="250" height="250">
         <h3 class="artistheader">U2</h3>
@@ -63,8 +64,7 @@
     <section>
         <p><b>U2</b> are an Irish rock band from Dublin. Formed in 1976, the group consists of <a
                 href='http://wikipedia.org/wiki/Bono'>Bono</a> (lead vocals and guitar), the Edge (guitar, keyboards,
-            and
-            backing vocals), <a href='http://wikipedia.org/wiki/Adam_Clayton'>Adam Clayton</a> (bass guitar), and <a
+            and backing vocals), <a href='http://wikipedia.org/wiki/Adam_Clayton'>Adam Clayton</a> (bass guitar), and <a
                     href='http://wikipedia.org/wiki/Larry_Mullen_Jr.'>Larry Mullen Jr.</a> (drums and percussion). U2's
             early sound was rooted in post-punk but eventually grew to incorporate influences from many genres of
             popular
@@ -72,7 +72,7 @@
             Their lyrics, often embellished with spiritual imagery, focus on personal themes and sociopolitical
             concerns.
         </p>
-
+        <h3>Achievements</h3>
         <p>U2 have released 13 studio albums and are one of the world's best-selling music artists of all time, having
             sold
             more than 170&#160;million records worldwide. They have won 22 Grammy Awards, more than any other band, and,
@@ -87,21 +87,30 @@
             Product Red, War Child and the Edge's Music Rising.</p>
     </section>
     <section>
-    <h2>History</h2>
-    <h3>Formation and early years (1976&#8211;1980)</h3>
-    <p>The band formed in <a href='http://wikipedia.org/wiki/Dublin'>Dublin</a> on 25 September 1976. Larry Mullen, Jr.,
-        then a 14-year-old student at Mount Temple Comprehensive School, posted a note on the school's notice board in
-        search of musicians for a new band&#8212;six people responded. Setting up in his kitchen, Mullen was on drums,
-        with Paul Hewson (Bono) on lead vocals; David Evans (the Edge) and his older brother <a
-                href='http://wikipedia.org/wiki/Dik_Evans'>Dik Evans</a> on guitar; Adam Clayton, a friend of the Evans
-        brothers on bass guitar; and initially Ivan McCormick and Peter Martin, two other friends of Mullen. Mullen
-        later described it as "'The Larry Mullen Band' for about ten minutes, then Bono walked in and blew any chance I
-        had of being in charge." Soon after, the group settled on the name "Feedback" because it was one of the few
-        technical terms they knew. Martin was the first to drop out of the group, and McCormick left within a few weeks
-        of the first practice. Most of the group's initial material consisted of cover songs, which the band admitted
-        was not their forte. Some of the earliest influences on the band were emerging punk rock acts, such as the Jam,
-        the Clash, Buzzcocks, and Sex Pistols. The popularity of punk rock convinced the group that musical proficiency
-        was not a prerequisite to being successful.</p>
+        <h2>History</h2>
+        <h3>Formation and early years (1976&#8211;1980)</h3>
+        <p>The band formed in <a href='http://wikipedia.org/wiki/Dublin'>Dublin</a> on 25 September 1976. Larry Mullen,
+            Jr.,
+            then a 14-year-old student at Mount Temple Comprehensive School, posted a note on the school's notice board
+            in
+            search of musicians for a new band&#8212;six people responded. Setting up in his kitchen, Mullen was on
+            drums,
+            with Paul Hewson (Bono) on lead vocals; David Evans (the Edge) and his older brother <a
+                    href='http://wikipedia.org/wiki/Dik_Evans'>Dik Evans</a> on guitar; Adam Clayton, a friend of the
+            Evans
+            brothers on bass guitar; and initially Ivan McCormick and Peter Martin, two other friends of Mullen. Mullen
+            later described it as "'The Larry Mullen Band' for about ten minutes, then Bono walked in and blew any
+            chance I
+            had of being in charge." Soon after, the group settled on the name "Feedback" because it was one of the few
+            technical terms they knew. Martin was the first to drop out of the group, and McCormick left within a few
+            weeks
+            of the first practice. Most of the group's initial material consisted of cover songs, which the band
+            admitted
+            was not their forte. Some of the earliest influences on the band were emerging punk rock acts, such as the
+            Jam,
+            the Clash, Buzzcocks, and Sex Pistols. The popularity of punk rock convinced the group that musical
+            proficiency
+            was not a prerequisite to being successful.</p>
     </section>
     <section>
         <h2>Campaigning and activism</h2>
