--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/weeknd.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/weeknd.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/weeknd.jpg" alt="The Weeknd" width="250" height="250">
         <h3 class="artistheader">The Weeknd</h3>
@@ -67,27 +68,10 @@
             uploaded
             several songs to <a href='http://wikipedia.org/wiki/YouTube'>YouTube</a> under the name "The Weeknd". He
             released three nine-track mixtapes throughout 2011: <i>House of Balloons</i>, <i>Thursday</i>, and <i>Echoes
-                of
-                Silence</i>, which were critically acclaimed. The following year, he released a compilation album
+                of Silence</i>, which were critically acclaimed. The following year, he released a compilation album
             <i>Trilogy</i>, thirty tracks consisting of remastered versions of the mixtape material and three additional
             songs. It was released under <a href='http://wikipedia.org/wiki/Republic_Records'>Republic Records</a> and
-            his
-            own label XO.</p>
-        <p>In 2013, he released his debut studio album <i>Kiss Land</i>, which was supported by the singles "Kiss Land"
-            and
-            "Live For". His second album, <i>Beauty Behind the Madness</i>, which became his first number one album on
-            the
-            <i>Billboard</i> 200, included the top-five single "Earned It" and produced the number-one singles "The
-            Hills"
-            and "Can't Feel My Face". The songs have simultaneously held the top three spots on the <i>Billboard</i> Hot
-            R&amp;B
-            Songs chart, making him the first artist in history to achieve this. The Weeknd has won two Grammy Awards
-            and
-            has been nominated for an Academy Award. In September 2016, the release of the third album, <i>Starboy</i>
-            was
-            announced, along with the release of the tracks "Starboy" and "False Alarm".</p>
-    </section>
-    <section>
+            his own label XO.</p>
         <h2>Early life</h2>
         <p>Ab&#233;l Makkonen Tesfaye was born on 16 February 1990, in Scarborough, Ontario, a district of Toronto. He
             is
