--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/photos.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/photos.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../css/photogallerystylesheet.css">
+    <link rel="stylesheet" href="../css/photogallery.css">
 
     <!-- External Fonts: -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../index.html">Home</a></li>
         <li><a class="hoverable" href="./lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="photogallerybanner">
+<header class="banner photogallerybanner">
     <h1>Tide 2015!</h1>
     <p class="subintro">Check out some pictures from last year</p>
 
@@ -55,7 +55,7 @@
 <!-- Content: -->
 <!-- The gallery is split up into sections of 4 images to prevent empty spaces -->
 <!-- At all times the number of images need to be a multiple of 4 -->
-<section class="photogallery">
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/girlpool.jpg" alt="girlpool">
     </figure>
@@ -68,8 +68,8 @@
     <figure class="photo">
         <img src="../images/photos/moreholi.jpg" alt="moreholi">
     </figure>
-</section>
-<section class="photogallery">
+</div>
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/womenlaugh.jpg" alt="womenlaugh">
     </figure>
@@ -82,8 +82,8 @@
     <figure class="photo">
         <img src="../images/photos/vibes.jpg" alt="vibes">
     </figure>
-</section>
-<section class="photogallery">
+</div>
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/holi.jpg" alt="holi">
     </figure>
@@ -96,8 +96,8 @@
     <figure class="photo">
         <img src="../images/photos/tent.jpg" alt="tent">
     </figure>
-</section>
-<section class="photogallery">
+</div>
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/camping.jpg" alt="camping">
     </figure>
@@ -110,8 +110,8 @@
     <figure class="photo">
         <img src="../images/photos/flagscrowd.jpg" alt="flagscrowd">
     </figure>
-</section>
-<section class="photogallery">
+</div>
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/peace.jpg" alt="peace">
     </figure>
@@ -124,8 +124,8 @@
     <figure class="photo">
         <img src="../images/photos/sparks.jpg" alt="sparks">
     </figure>
-</section>
-<section class="photogallery">
+</div>
+<div class="photogallery">
     <figure class="photo">
         <img src="../images/photos/sandy.jpg" alt="sandy">
     </figure>
@@ -138,7 +138,7 @@
     <figure class="photo">
         <img src="../images/photos/rays.jpg" alt="rays">
     </figure>
-</section>
+</div>
 
 <!-- Footer with 3 columns: -->
 <footer>
