--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../css/ticketformstylesheet.css">
+    <link rel="stylesheet" href="../css/ticketform.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../index.html">Home</a></li>
         <li><a class="hoverable" href="./lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -44,7 +44,7 @@
 
 <!-- Background banner, title text and buttons: -->
 <!-- Banner, intro text and buttons: -->
-<header class="ticketinfobanner">
+<header class="banner ticketinfobanner">
     <h1>Tide ticket info</h1>
     <p class="subintro">Limited time discount for early reservations!</p>
 
@@ -60,32 +60,31 @@
         <h2>Latest news</h2>
     </header>
     <section>
-        <h3>Tide wins best European Festival of 2016!</h3>
+        <h3>Where do I get tickets?</h3>
         <h4>13 January 2016</h4>
-        <p> The winners of the 2016 European Festival Awards were announced at a gala show in Groningen, The Netherlands
-            last night. 'Tide' managed to finish in first place.</p>
-        <p> Presented in association with Yourope (the European Festival Association) and marking the opening of the
-            annual four-day Eurosonic Noorderslag event, the European Festival Awards celebrate the successes of
-            Europe’s music festival industry. Decided by a combination of public vote and industry juries, the Awards
-            are the only pan-European body solely dedicated to recognising the contributions and achievements of the
-            event organisers and performing artists that generate billions of Euros for local economies and brighten up
-            the summer for tens of millions of festival-goers each year. The 2016 European Festival Awards featured over
-            350 festivals from 50 different European countries, with over 800,000 votes cast in total. This years award
-            goes to 'Tide', for an outstanding lineup and a great visual story telling performance. Runner up 'Sziget
-            Festival', responded in disgrace of the voting system. Thank you all for voting for Tide this
-            year as the best European festival.</p>
+        <p> Tickets can be bought digitally on the Tide website and from the Tide Ambassadors spread all over the world.
+            As usual the Tide ticket prices are decided taking social awareness into consideration: Flexible prices to
+            suit the different economic realities of each country. What kind of tickets can i get? How much do they
+            cost? Are there different kinds of tickets? Do children need a ticket?
+            Children under 13 do not need a ticket, but they must be accompanied by parents or legal tutors. Young
+            adults under 18 years old also need to be accompanied by parents or legal tutors. Note: Considering the high
+            temperatures, loud noise and high levels of dust, we recommend parents not to bring children under 3 years
+            of age!</p>
     </section>
     <section>
-        <h3>Tide attracted 76.000 visitors in three days!</h3>
+        <h3>Pricing</h3>
         <h4>25 December 2015</h4>
-        <p>The first three nights of our festival attracted more than 76,000 visitors! Meanwhile 10-day-pass-tickets are
-            sold out, one-day tickets are still available. Friday night, Belgian band Hooverphonic attracted 7.000 music
-            fans, while a concert by American The Weeknd was quickly sold out. </p>
-        <p> Saturday evening, Belgian
-            singer Antoine Hénaut and Mickey 3D and Feu! Chatterton from France performed at 'Tide'. While the Central
-            Dome welcomed Americansinger Brisa Roché and her latest album "Invisible". On Sunday, Bears of Legend and
-            Chelim entertained the crowd, although it was Grandgeorges who sold out the hall. At the Main Stage, Belgian
-            band La Smala & friends concluded the evening.</p>
+        <p>We have chosen to have less ticket phases compared with previous editions to allow you more time to acquire a
+            ticket in each phase (there are three phases in 2016 and not four phases as in 2014). We don’t increase the
+            highest price of the tickets (which remains at 180 €). We applied an average between the previous 3 ticket
+            phases in ​​2014 (120€, 140€, 160€) to obtain an average for the current value of the first two stages in
+            2016 (130€, 150€).
+            Furthermore, tickets for Tide are limited. In spite of the growing popularity and positive perception about
+            Tide, we are focused on keeping a familiar and cozy vibe, with quality and comfort. Tide is not about
+            quantity. There are 100.000 tickets available for Tide 2016.
+            There are a limited number of tickets per phase. If tickets are Sold Out before the date of the end of the
+            phase, the following Phase begins immediately. Never buy a ticket on auction websites such as Ebay, Olx and
+            many others.</p>
     </section>
 </article>
 
