--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/buytickets.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/buytickets.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/ticketformstylesheet.css">
+    <link rel="stylesheet" href="../../css/ticketform.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="hoverable" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,8 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="ticketsbanner">
-</header>
+<header class="banner ticketsbanner"></header>
 
 <!-- Content: -->
 <section class="buytickets">
