--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/coldplay.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/coldplay.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/coldplay.jpg" alt="Coldplay" width="250" height="250">
         <h3 class="artistheader">Coldplay</h3>
@@ -77,6 +78,7 @@
                 Sisters</i> as a single in 1999, and <i>The Blue Room</i> in the same year. <i>The Blue Room</i> was
             their
             first release on a major label, after signing to Parlophone.</p>
+            <h3>Fame</h3>
         <p>They achieved worldwide fame with the release of the single "Yellow" in 2000. This was followed by their
             debut
             album <i>Parachutes</i> released the same year, which was nominated for the Mercury Prize. The band's second
