--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/justin.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/justin.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/justin.jpg" alt="Justin Bieber" width="250"
              height="250">
@@ -77,6 +78,7 @@
             in 2012. His fourth studio album <i>Purpose</i> was released in November 2015. His U.S. album and singles
             sales total 44.7 million. He has sold an estimated 100 million records, making him one of the world&#8217;s
             best-selling music artists.</p>
+        <h3>Awards</h3>
         <p>He has won numerous fan-voted awards, including <a href='http://wikipedia.org/wiki/American_Music_Award'
         >American Music Award</a> for Artist of the Year
             in 2010 and 2012. In his career, he has received three Grammy nominations, winning one for <a
