--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/radiohead.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/radiohead.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/radiohead.jpg" alt="Radiohead" width="250" height="250">
         <h3 class="artistheader">Radiohead</h3>
@@ -76,8 +77,6 @@
             included in <i>Rolling Stone</i>'s list of greatest guitarists, and Yorke (66th) in their list
             of greatest singers. In 2009, <i>Rolling Stone</i> readers voted the group the second-best artist of the
             2000s.</p>
-    </section>
-    <section>
         <h2>Style and songwriting</h2>
         <p>Among Radiohead members' earliest influences were Queen, <a href='http://wikipedia.org/wiki/Pink_Floyd'
         >Pink Floyd</a> and Elvis Costello,
