--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/stromae.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/stromae.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/stromae.jpg" alt="Stromae" width="250" height="250">
         <h3 class="artistheader">Stromae</h3>
@@ -65,14 +66,10 @@
             Belgian
             musician, singer, rapper and songwriter. Stromae was born to a Rwandan father, Pierre Rutare, and a Belgian
             mother, Miranda Marie Van Haver. He is originally from Laeken, in Brussels. He established himself in both
-            the
-            hip hop and electronic music genres. Stromae came to wide public attention in 2009 with his song "Alors on
-            danse", which became a number one in several European countries. In 2013, his second album <i>Racine
+            the hip hop and electronic music genres. Stromae came to wide public attention in 2009 with his song "Alors
+            on danse", which became a number one in several European countries. In 2013, his second album <i>Racine
                 carr&#233;e</i> was a commercial success, selling 2 million copies in France alone and nearly 600,000
-            units
-            elsewhere.</p>
-    </section>
-    <section>
+            units elsewhere.</p>
         <h2>Early life</h2>
         <p>Stromae was born in <a href='http://wikipedia.org/wiki/Belgium'>Belgium</a> to a <a
                 href='http://wikipedia.org/wiki/Tutsi'>Tutsi</a> father and a <a
