--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/whitelies.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/whitelies.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineup.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -43,7 +43,7 @@
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header class="lineupbanner">
+<header class="banner lineupbanner">
     <h1 class="intro">Our line up for 2016</h1>
     <p class="subintro">Plan your concerts in advance to get the
         best Tide experience!
@@ -54,6 +54,7 @@
 
 <!-- Content: -->
 <article>
+    <h2 class="artistarticle">Artist info</h2>
     <figure class="artistgallery">
         <img class="artistimg" src="../../images/bands/whitelies.jpg" alt="White Lies" width="250" height="250">
         <h3 class="artistheader">White Lies</h3>
@@ -62,13 +63,11 @@
     </figure>
     <section>
         <p><b>White Lies</b> are an English post-punk band from Ealing, London. Formerly known as <b>Fear of Flying</b>,
-            the
-            core band members are Harry McVeigh (lead vocals, guitar), Charles Cave (bass guitar and backing vocals),
-            and
-            Jack Lawrence-Brown (drums). The band perform live as a five-piece, when sidemen Tommy Bowen and Rob Lee
-            join
-            the line up. White Lies' musical style has been described as dark yet uplifting by the media, drawing
-            comparisons to Editors, Interpol, Joy Division, and The Killers.</p>
+            the core band members are Harry McVeigh (lead vocals, guitar), Charles Cave (bass guitar and backing
+            vocals), and Jack Lawrence-Brown (drums). The band perform live as a five-piece, when sidemen Tommy Bowen
+            and Rob Lee join the line up. White Lies' musical style has been described as dark yet uplifting by the
+            media, drawing comparisons to Editors, Interpol, Joy Division, and The Killers.</p>
+        <h3>Formation</h3>
         <p>White Lies formed in October 2007, after writing songs that they felt didn't suit their original band. After
             delaying their first performance for five months to build up media hype, they earned a recording contract
             with
