--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/ticketconfirm.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/tickets/ticketconfirm.html
@@ -8,7 +8,7 @@
 
     <!-- CSS: -->
     <link rel="stylesheet" href="../../css/basicstylesheet.css">
-    <link rel="stylesheet" href="../../css/ticketformstylesheet.css">
+    <link rel="stylesheet" href="../../css/ticketform.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -19,7 +19,7 @@
 <!-- Navigation menu: -->
 <nav>
     <ul>
-        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li class="firstnavitem"><a class="hoverable" href="../../index.html">Home</a></li>
         <li><a class="hoverable" href="../lineupinfo.html">Line-up &#9662;</a>
             <!-- Lineup dropdown menu: -->
             <ul>
@@ -44,7 +44,7 @@
 
 <!-- Background banner, title text and buttons: -->
 <!-- Banner, intro text and buttons: -->
-<header class="ticketsbanner">
+<header class="banner ticketsbanner">
     <section class="ticketconfirmation">
         <h3 class="notice">Thank you for your order</h3>
         <p class="notice">An email has been sent to you with further details about your order, please check your
